--- a/.github/workflows/githubci-actions.yml
+++ b/.github/workflows/githubci-actions.yml
@@ -1,6 +1,6 @@
 name: dotnet package
 
-on: [push]
+on: [workflow_dispatch]
 
 jobs:
   build:
@@ -11,6 +11,9 @@ jobs:
         dotnet-version: ['5.0.x' ]
 
     steps:
+      - name: Set up cli
+        uses: actions/setup-python@v2
+      - run: pip install awsebcli --upgrade --user
       - uses: actions/checkout@v2
       - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
         uses: actions/setup-dotnet@v1.7.2
@@ -20,5 +23,18 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build --configuration Release --no-restore
-      - name: Test
-        run: dotnet test --no-restore --verbosity normal
+      - name: Deploy
+        run: |
+            cd HASmart.WebApi/
+            dotnet tool install -g Amazon.ElasticBeanstalk.Tools
+            dotnet restore
+            sudo apt-get update
+            sudo apt-get install zip -y
+            dotnet eb deploy-environment --region "$aws_default_region" --aws-access-key-id "$aws_access_key_id" --aws-secret-key "$aws_secret_key" -app "$aws_eb_appname" -env "$aws_eb_envname" --solution-stack "$aws_solution_stack" --instance-profile "aws-elasticbeanstalk-ec2-role"
+        env:
+            aws_default_region: ${{secrets.AWS_DEFAULT_REGION}}
+            aws_access_key_id: ${{secrets.AWS_ACCESS_KEY_ID}}
+            aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+            aws_eb_appname: ${{secrets.AWS_EB_APPNAME}}
+            aws_eb_envname: ${{secrets.AWS_EB_ENVNAME}}
+            aws_solution_stack: ${{secrets.SOLUTION_STACK}}
